[project]
name = "nonebot-plugin-template"
version = "0.1.0"
description = "æ’ä»¶æè¿°"
readme = "README.md"
authors = [{ name = "owner", email = "owner@gmail.com" }]
urls = { Repository = "https://github.com/owner/nonebot-plugin-template" }
requires-python = ">=3.10"
dependencies = [
  "nonebot2>=2.4.3,<3.0.0",

  "nonebot-plugin-localstore>=0.7.4,<1.0.0",  # å­˜å‚¨æ–‡ä»¶
  "nonebot-plugin-apscheduler>=0.5.0,<1.0.0", # å®šæ—¶ä»»åŠ¡

  "nonebot-plugin-uninfo>=0.9.0,<1.0.0",   # å¤šå¹³å°ç”¨æˆ·ä¿¡æ¯èŽ·å–
  "nonebot-plugin-alconna>=0.59.4,<1.0.0", # è·¨å¹³å°å‘½ä»¤è§£æžæ‹“å±•
  # "nonebot-adapter-onebot>=2.4.6,<3.0.0"

  "httpx>=0.27.0,<1.0.0",
]

[dependency-groups]
dev = [
  "nonebot2[fastapi]>=2.4.2,<3.0.0",
  "ruff>=0.12.9,<1.0.0",
  "nonemoji>=0.1.4,<1.0.0",
  "pre-commit>=4.3.0",
  "bump-my-version>=1.2.1",
]

test = [
  "nonebot2[fastapi]>=2.4.2,<3.0.0",
  "nonebot-adapter-onebot>=2.4.6,<3.0.0",
  "nonebug>=0.3.7,<1.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
  "pytest-asyncio>=1.1.0,<1.2.0",
]

[tool.nonebot]
plugins = ["nonebot_plugin_template"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["src"]
addopts = [
  "-v",               # è¯¦ç»†è¾“å‡º
  "-s",               # æ˜¾ç¤ºæ‰“å°ä¿¡æ¯
  "--tb=short",       # ç®€çŸ­çš„é”™è¯¯å›žæº¯
  "-ra",              # æ˜¾ç¤ºæ‰€æœ‰æµ‹è¯•ç»“æžœæ‘˜è¦
  "--strict-markers", # ä¸¥æ ¼æ ‡è®°æ¨¡å¼
  # "--doctest-modules", # è¿è¡Œæ–‡æ¡£æµ‹è¯•
  "--import-mode=prepend", # å¯¼å…¥æ¨¡å¼
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
]

ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "W191",   # indentation contains tabs
  "TID252", # relative import
]


[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
  { root = "./tests", extraPaths = [
    "./src",
  ] },
  { root = "./src" },
]
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true


[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
message = "ðŸ”– release: bump vesion from {current_version} to {new_version}"
tag = true

[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"nonebot-plugin-template\"\nversion = \"{current_version}\""
replace = "name = \"nonebot-plugin-template\"\nversion = \"{new_version}\""
